// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button/Default (Text) Block Button 1`] = `
@keyframes animation-0 {
  from {
    left: -50%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: 100%;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 100%;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #ffffff;
}

.emotion-13 {
  width: 100%;
  position: absolute;
}

.emotion-14 {
  width: 100%;
  height: 0.25rem;
  overflow: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  position: relative;
}

.emotion-14:before {
  content: "";
  width: 100%;
  height: 0.125rem;
  display: block;
}

.emotion-15 {
  width: 50%;
  background: linear-gradient(270deg, #F814E1 0.02%, #4945EE 100%);
  height: 0.125rem;
  position: absolute;
  bottom: 0;
  top: 0;
  -webkit-animation: animation-0 1.5s infinite;
  animation: animation-0 1.5s infinite;
}

.emotion-16 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 100%;
  background-color: #1451dc;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-16:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-16:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-16:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-16:active:not(:disabled) {
  background-color: #1451dc;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Hello world
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
              <span>
                Hello world
              </span>
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-13"
            data-testid="button"
          >
            <div
              className="emotion-14"
            >
              <div
                className="emotion-15"
              />
            </div>
          </div>
          <button
            className="emotion-16"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Hello world
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Hello world
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/Default (Text) Button Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
              <span>
                Hello world
              </span>
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/Default (Text) Button Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: #dcdfff;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-6:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-6:disabled {
  opacity: 50%;
  background-color: #dcdfff;
  cursor: not-allowed;
}

.emotion-6:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-6:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-9 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-9:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-9:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-9:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-9:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-12 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #cc1255;
  background-color: #ffd0e1;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-12:disabled {
  opacity: 50%;
  background-color: #ffd0e1;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #ffe7f0;
}

.emotion-12:active:not(:disabled) {
  background-color: #ffd0e1;
}

.emotion-15 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #212332;
  background-color: #77f1d3;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-15:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-15:disabled {
  opacity: 50%;
  background-color: #77f1d3;
  cursor: not-allowed;
}

.emotion-15:hover:not(:disabled) {
  background-color: #4aedc4;
}

.emotion-15:active:not(:disabled) {
  background-color: #1de9b6;
}

.emotion-18 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1de9b6;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-18:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Primary
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-6"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Secondary
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-9"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Tertiary
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-12"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Danger
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-15"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Inverted
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-18"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                InvertedAlt
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Primary
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-6"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Secondary
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-9"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Tertiary
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-12"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Danger
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-15"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Inverted
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-18"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                InvertedAlt
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/Default (Text) Buttons with Avatars 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-5 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-15 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-15 path {
  fill: #1451dc;
}

.emotion-22 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-22 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <div
                className="emotion-5"
                data-testid="_avatar"
              >
                PR
              </div>
              <span>
                Text Avatar
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <div
                className="emotion-5"
                data-testid="_avatar"
              >
                <img
                  src="https://mui.com/static/images/avatar/1.jpg"
                />
              </div>
              <span>
                Img Avatar
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <div
                className="emotion-5"
                data-testid="_avatar"
              >
                <span
                  className="emotion-14"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-15"
                  />
                </span>
              </div>
              <span>
                Empty Avatar
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <div
                className="emotion-5"
                data-testid="_avatar"
              >
                PR
              </div>
              <span>
                Text Avatar
              </span>
              <span
                className="emotion-14"
                onClick={[Function]}
              >
                <span
                  className="emotion-22"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <div
                className="emotion-5"
                data-testid="_avatar"
              >
                <img
                  src="https://mui.com/static/images/avatar/1.jpg"
                />
              </div>
              <span>
                Img Avatar
              </span>
              <span
                className="emotion-14"
                onClick={[Function]}
              >
                <span
                  className="emotion-22"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <div
                className="emotion-5"
                data-testid="_avatar"
              >
                <span
                  className="emotion-14"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-15"
                  />
                </span>
              </div>
              <span>
                Empty Avatar
              </span>
              <span
                className="emotion-14"
                onClick={[Function]}
              >
                <span
                  className="emotion-22"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/Default (Text) Buttons with Icons 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-3:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-3:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #ffffff;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
              <span>
                Only left Icon
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
              <span>
                Both Icons
              </span>
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span>
                Only Right Icon
              </span>
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button/Default (Text) Loading Button 1`] = `
@keyframes animation-0 {
  from {
    left: -50%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  width: 1000px;
  height: 400px;
  background: #f3f5f8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 32px;
}

.emotion-5 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6 {
  width: 100%;
  position: absolute;
}

.emotion-7 {
  width: 100%;
  height: 0.25rem;
  overflow: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  position: relative;
}

.emotion-7:before {
  content: "";
  width: 100%;
  height: 0.125rem;
  display: block;
}

.emotion-8 {
  width: 50%;
  background: linear-gradient(270deg, #F814E1 0.02%, #4945EE 100%);
  height: 0.125rem;
  position: absolute;
  bottom: 0;
  top: 0;
  -webkit-animation: animation-0 1.5s infinite;
  animation: animation-0 1.5s infinite;
}

.emotion-9 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #1451dc;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-9:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-9:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-9:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-9:active:not(:disabled) {
  background-color: #1451dc;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-15 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: #cad0ff;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-15:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-15:disabled {
  opacity: 50%;
  background-color: #dcdfff;
  cursor: not-allowed;
}

.emotion-15:hover:not(:disabled) {
  background-color: #edefff;
}

.emotion-15:active:not(:disabled) {
  background-color: #cad0ff;
}

.emotion-21 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23, 91, 245, 0.18);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-21:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-21:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-21:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-21:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-27 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #cc1255;
  background-color: #ffd0e1;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-27:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-27:disabled {
  opacity: 50%;
  background-color: #ffd0e1;
  cursor: not-allowed;
}

.emotion-27:hover:not(:disabled) {
  background-color: #ffe7f0;
}

.emotion-27:active:not(:disabled) {
  background-color: #ffd0e1;
}

.emotion-33 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #212332;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-33:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-33:disabled {
  opacity: 50%;
  background-color: #77f1d3;
  cursor: not-allowed;
}

.emotion-33:hover:not(:disabled) {
  background-color: #4aedc4;
}

.emotion-33:active:not(:disabled) {
  background-color: #1de9b6;
}

.emotion-39 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #1de9b6;
  background-color: rgba(23, 91, 245, 0.18);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
  pointer-events: none;
}

.emotion-39:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-39:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-39:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-39:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-42 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-42:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-42:disabled {
  opacity: 50%;
  background-color: #175bf5;
  cursor: not-allowed;
}

.emotion-42:hover:not(:disabled) {
  background-color: #457bf7;
}

.emotion-42:active:not(:disabled) {
  background-color: #1451dc;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
                data-testid="button"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  />
                </div>
              </div>
              <button
                className="emotion-9"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-10"
                >
                  <span>
                    Primary
                  </span>
                </span>
              </button>
            </div>
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
                data-testid="button"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  />
                </div>
              </div>
              <button
                className="emotion-15"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-10"
                >
                  <span>
                    Secondary
                  </span>
                </span>
              </button>
            </div>
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
                data-testid="button"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  />
                </div>
              </div>
              <button
                className="emotion-21"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-10"
                >
                  <span>
                    Tertiary
                  </span>
                </span>
              </button>
            </div>
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
                data-testid="button"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  />
                </div>
              </div>
              <button
                className="emotion-27"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-10"
                >
                  <span>
                    Danger
                  </span>
                </span>
              </button>
            </div>
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
                data-testid="button"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  />
                </div>
              </div>
              <button
                className="emotion-33"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-10"
                >
                  <span>
                    Inverted
                  </span>
                </span>
              </button>
            </div>
            <div
              className="emotion-5"
            >
              <div
                className="emotion-6"
                data-testid="button"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  />
                </div>
              </div>
              <button
                className="emotion-39"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-10"
                >
                  <span>
                    InvertedAlt
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            Press the Button below to trigger loading for 4s
          </div>
          <div
            className="emotion-5"
          >
            <button
              className="emotion-42"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-10"
              >
                <span>
                  Click here
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
